finished step 5 with no problems! application done

--- a/app/app.html
+++ b/app/app.html
@@ -72,6 +72,7 @@
               <div class="token-button">send</div>
             </div>
             <div class="ajax-success">
+              <h5 class="success-statement">Awesome!</h5>
               <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                 <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
                 <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
@@ -88,6 +89,7 @@
               <div class="reverse-button">reverse</div>
             </div>
             <div class="ajax-success">
+              <h5 class="success-statement">Cool!</h5>
               <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                 <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
                 <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
@@ -104,6 +106,7 @@
               <div class="find-button">search</div>
             </div>
             <div class="ajax-success">
+              <h5 class="success-statement">Alright!</h5>
               <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                 <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
                 <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
@@ -120,6 +123,7 @@
               <div class="prefix-button">search</div>
             </div>
             <div class="ajax-success">
+              <h5 class="success-statement">Got it!</h5>
               <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
                 <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
                 <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
@@ -127,8 +131,21 @@
             </div>
           </div>
           
-          <div class="next-step" data-step="5">
-            
+          <div class="datestamp-step" data-step="5">
+            <div class="command-wrapper">
+              <h5 class="instructions">datestamp</h5>
+              <div class="input-wrapper">
+                <input name="datestamp" readonly/>
+              </div>
+              <div class="datestamp-button">add interval</div>
+            </div>
+            <div class="ajax-success">
+              <h5 class="success-statement">Finished!</h5>
+              <svg class="checkmark" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/>
+                <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
+              </svg>
+            </div>
           </div>
 
         </div>
